--- a/pom.xml
+++ b/pom.xml
@@ -1,3 +1,4 @@
+<?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
@@ -8,7 +9,15 @@
     <artifactId>psi-sist-commons</artifactId>
     <version>1.0-SNAPSHOT</version>
     <packaging>pom</packaging>
-    <name>psi-sist-commons</name>
+    <name>${project.groupId}:${project.artifactId}</name>
+
+    <repositories>
+        <repository>
+            <id>psi-artifactory</id>
+            <name>psi-artifactory</name>
+            <url>https://artifactory.parabrisassi.com/artifactory/libs-release/</url>
+        </repository>
+    </repositories>
 
     <properties>
         <!-- Build -->
@@ -17,7 +26,22 @@
         <!-- Plugins versions-->
         <maven-compiler-plugin.version>3.7.0</maven-compiler-plugin.version>
         <versions-maven-plugin.version>2.5</versions-maven-plugin.version>
+
+        <!-- Dependencies versions -->
+        <com.parabrisassi.sist.dependencies.version>0.0.1-RELEASE</com.parabrisassi.sist.dependencies.version>
     </properties>
+
+    <dependencyManagement>
+        <dependencies>
+            <dependency>
+                <groupId>com.parabrisassi.sist</groupId>
+                <artifactId>dependencies</artifactId>
+                <version>${com.parabrisassi.sist.dependencies.version}</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
+        </dependencies>
+    </dependencyManagement>
 
     <build>
         <pluginManagement>
@@ -42,5 +66,6 @@
             </plugins>
         </pluginManagement>
     </build>
+
 
 </project>
