--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,10 @@
     <packaging>pom</packaging>
     <name>${project.groupId}:${project.artifactId}</name>
 
+    <modules>
+        <module>commons-repositories</module>
+    </modules>
+
     <repositories>
         <repository>
             <id>psi-artifactory</id>
