Add commons errors artifact

--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,7 @@
 
     <modules>
         <module>commons-repositories</module>
+        <module>commons-errors</module>
     </modules>
 
     <repositories>
