Add commons exceptions artifact

--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
     <modules>
         <module>commons-repositories</module>
         <module>commons-errors</module>
+        <module>commons-exceptions</module>
     </modules>
 
     <repositories>
