--- a/pom.xml
+++ b/pom.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 
     <modelVersion>4.0.0</modelVersion>
@@ -15,6 +14,7 @@
         <module>commons-repositories</module>
         <module>commons-errors</module>
         <module>commons-exceptions</module>
+        <module>commons-models-validation</module>
     </modules>
 
     <repositories>
@@ -35,6 +35,7 @@
 
         <!-- Dependencies versions -->
         <com.parabrisassi.sist.dependencies.version>0.0.1-RELEASE</com.parabrisassi.sist.dependencies.version>
+        <commons-validator.version>1.6</commons-validator.version>
     </properties>
 
     <dependencyManagement>
@@ -45,6 +46,13 @@
                 <version>${com.parabrisassi.sist.dependencies.version}</version>
                 <type>pom</type>
                 <scope>import</scope>
+            </dependency>
+
+            <!-- Apache Commons Validator -->
+            <dependency>
+                <groupId>commons-validator</groupId>
+                <artifactId>commons-validator</artifactId>
+                <version>${commons-validator.version}</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
