--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,7 @@
     <name>${project.groupId}:${project.artifactId}</name>
 
     <modules>
+        <module>commons-bom</module>
         <module>commons-repositories</module>
         <module>commons-errors</module>
         <module>commons-exceptions</module>
