--- a/commons-bom/pom.xml
+++ b/commons-bom/pom.xml
@@ -47,6 +47,11 @@
                 <artifactId>commons-models-validation</artifactId>
                 <version>${com.parabrisassi.sist.commons.version}</version>
             </dependency>
+            <dependency>
+                <groupId>com.parabrisassi.sist</groupId>
+                <artifactId>commons-web-exceptions</artifactId>
+                <version>${com.parabrisassi.sist.commons.version}</version>
+            </dependency>
         </dependencies>
     </dependencyManagement>
 </project>
