Add commons error handlers artifact

--- a/commons-bom/pom.xml
+++ b/commons-bom/pom.xml
@@ -34,6 +34,11 @@
             </dependency>
             <dependency>
                 <groupId>com.parabrisassi.sist</groupId>
+                <artifactId>commons-error-handlers</artifactId>
+                <version>${com.parabrisassi.sist.commons.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.parabrisassi.sist</groupId>
                 <artifactId>commons-errors</artifactId>
                 <version>${com.parabrisassi.sist.commons.version}</version>
             </dependency>
