Add commons data transfer artifact

--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,7 @@
         <module>commons-dtos</module>
         <module>commons-web-exceptions</module>
         <module>commons-web-constants</module>
+        <module>commons-data-transfer</module>
     </modules>
 
     <repositories>
