--- a/commons-web-config/pom.xml
+++ b/commons-web-config/pom.xml
@@ -19,6 +19,12 @@
     </properties>
 
     <dependencies>
+        <dependency>
+            <groupId>com.parabrisassi.sist</groupId>
+            <artifactId>commons-data-transfer</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+
         <!-- Spring Boot Auto-configuration -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
