--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,7 @@
 
     <modules>
         <module>commons-bom</module>
+        <module>commons-authentication</module>
         <module>commons-authentication-interfaces</module>
         <module>commons-data-transfer</module>
         <module>commons-dtos</module>
@@ -46,6 +47,7 @@
         <!-- Dependencies versions -->
         <com.parabrisassi.sist.dependencies.version>0.0.2-RELEASE</com.parabrisassi.sist.dependencies.version>
         <commons-validator.version>1.6</commons-validator.version>
+        <io.jsonwebtoken.jjwt.version>0.9.0</io.jsonwebtoken.jjwt.version>
     </properties>
 
     <dependencyManagement>
@@ -63,6 +65,13 @@
                 <groupId>commons-validator</groupId>
                 <artifactId>commons-validator</artifactId>
                 <version>${commons-validator.version}</version>
+            </dependency>
+
+            <!-- JSON Web Tokens-->
+            <dependency>
+                <groupId>io.jsonwebtoken</groupId>
+                <artifactId>jjwt</artifactId>
+                <version>${io.jsonwebtoken.jjwt.version}</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
