Add commons web authentication artifact

--- a/commons-bom/pom.xml
+++ b/commons-bom/pom.xml
@@ -74,6 +74,11 @@
             </dependency>
             <dependency>
                 <groupId>com.parabrisassi.sist</groupId>
+                <artifactId>commons-web-authentication</artifactId>
+                <version>${com.parabrisassi.sist.commons.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.parabrisassi.sist</groupId>
                 <artifactId>commons-web-config</artifactId>
                 <version>${com.parabrisassi.sist.commons.version}</version>
             </dependency>
