--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,7 @@
         <module>commons-models-validation</module>
         <module>commons-repositories</module>
         <module>commons-roles</module>
+        <module>commons-web-authentication</module>
         <module>commons-web-config</module>
         <module>commons-web-constants</module>
         <module>commons-web-exceptions</module>
