--- a/commons-bom/pom.xml
+++ b/commons-bom/pom.xml
@@ -64,6 +64,11 @@
             </dependency>
             <dependency>
                 <groupId>com.parabrisassi.sist</groupId>
+                <artifactId>commons-persistence-helpers</artifactId>
+                <version>${com.parabrisassi.sist.commons.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.parabrisassi.sist</groupId>
                 <artifactId>commons-repositories</artifactId>
                 <version>${com.parabrisassi.sist.commons.version}</version>
             </dependency>
