--- a/commons-dtos/pom.xml
+++ b/commons-dtos/pom.xml
@@ -8,7 +8,7 @@
     <parent>
         <groupId>com.parabrisassi.sist</groupId>
         <artifactId>psi-sist-commons</artifactId>
-        <version>1.0-SNAPSHOT</version>
+        <version>1.0.0-RELEASE</version>
     </parent>
 
     <artifactId>commons-dtos</artifactId>
