--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>com.parabrisassi.sist</groupId>
     <artifactId>psi-sist-commons</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>1.0.0-RELEASE</version>
     <packaging>pom</packaging>
     <name>${project.groupId}:${project.artifactId}</name>
 
