--- a/webapp-commons-web-config/pom.xml
+++ b/webapp-commons-web-config/pom.xml
@@ -51,6 +51,10 @@
             <groupId>org.glassfish.jersey.containers</groupId>
             <artifactId>jersey-container-servlet-core</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.glassfish.jersey.media</groupId>
+            <artifactId>jersey-media-multipart</artifactId>
+        </dependency>
         <!-- Jackson JSON Provider for JAX-RS -->
         <dependency>
             <groupId>com.fasterxml.jackson.jaxrs</groupId>
