--- a/.gitignore
+++ b/.gitignore
@@ -27,3 +27,10 @@ buildNumber.properties
 # Flyway stuff
 ##################
 flyway.conf
+
+##################
+# Eclipse IDE
+##################
+.classpath
+.project
+.settings/
