added distribution management

--- a/pom.xml
+++ b/pom.xml
@@ -155,4 +155,15 @@
             </plugin>
         </plugins>
     </build>
+    <distributionManagement>
+		<snapshotRepository>
+			<id>adtomiclabs--repository.adtomiclabs</id>
+			<url>https://adtomiclabs-711479422268.d.codeartifact.us-east-1.amazonaws.com/maven/repository.adtomiclabs/</url>
+		</snapshotRepository>
+		<repository>
+			<id>adtomiclabs--repository.adtomiclabs</id>
+			<name>adtomiclabs--repository.adtomiclabs</name>
+			<url>https://adtomiclabs-711479422268.d.codeartifact.us-east-1.amazonaws.com/maven/repository.adtomiclabs/</url>
+		</repository>
+	</distributionManagement>
 </project>
