--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>com.adtomiclabs.commons</groupId>
     <artifactId>webapp-commons</artifactId>
-    <version>1.2.0-RELEASE</version>
+    <version>1.2.0-SNAPSHOT</version>
     <packaging>pom</packaging>
     <name>${project.groupId}:${project.artifactId}</name>
 
