--- a/webapp-commons-authentication/pom.xml
+++ b/webapp-commons-authentication/pom.xml
@@ -6,7 +6,7 @@
     <parent>
         <groupId>com.adtomiclabs.commons</groupId>
         <artifactId>webapp-commons</artifactId>
-        <version>1.2.0-RELEASE</version>
+        <version>1.2.0-SNAPSHOT</version>
     </parent>
 
     <artifactId>webapp-commons-authentication</artifactId>
